添加graceful-response依赖并配置

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.feiniaojin</groupId>
+            <artifactId>graceful-response</artifactId>
+            <version>5.0.4-boot3</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
